feat: bulk save